[package]
name = "fetch-streaming"
authors = ["itowlson <ivan.towlson@fermyon.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
futures = { version = "0.3.19", default-features = false }
spin-sdk = { git = "https://github.com/fermyon/spin-rust-sdk", branch = "main" }
spin-sqlx = { path = "../.." }
sqlx = "0.7.2"

[workspace]
